--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
+        "tailwindcss": "^0.4.0",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "bootstrap-social": "^5.1.1"
     }
 }
