--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "activismebe/database-layering": "^0.29.0",
         "activismebe/laravel-form-helpers": "^1.2",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
