--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "spatie/laravel-permission": "^2.7"
+        "spatie/laravel-permission": "^2.7",
+        "spatie/laravel-robots-middleware": "^1.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
