--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
+GITHUB_USERNAME= 
+GITHUB_PASSWORD=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
