--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "league/csv": "^9.1",
         "php-http/guzzle6-adapter": "^1.1",
         "spatie/laravel-permission": "^2.7",
         "spatie/laravel-robots-middleware": "^1.0"
