--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     },
     "require-dev": {
         "filp/whoops": "~2.0",
+        "friendsofphp/php-cs-fixer": "^2.9",
         "fzaninotto/faker": "~1.4",
         "laravel/homestead": "^7.0",
         "mockery/mockery": "~1.0",
