--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "activismebe/database-layering": "^0.29.0",
         "activismebe/laravel-form-helpers": "^1.2",
         "chencha/share": "^5.2",
+        "cybercog/laravel-ban": "^3.0",
         "fideloper/proxy": "~3.3",
         "knplabs/github-api": "^2.7",
         "laracasts/flash": "^3.0",
