--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.0.0",
+        "php": ">=7.2.0",
         "activismebe/database-layering": "^0.29.0",
         "activismebe/laravel-form-helpers": "^1.2",
         "chencha/share": "^5.2",
@@ -17,6 +17,7 @@
         "laravel/tinker": "~1.0",
         "league/csv": "^9.1",
         "php-http/guzzle6-adapter": "^1.1",
+        "spatie/laravel-activitylog": "^2.3",
         "spatie/laravel-permission": "^2.7",
         "spatie/laravel-robots-middleware": "^1.0"
     },
