--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ before_script:
     - travis_retry composer self-update
     - travis_retry composer install --no-interaction --prefer-source --dev
     - php artisan key:generate
-    - php artisan migrate --database=testing --force
-    
+    - php artisan migrate --database=sqlite --force
+
 script:
     - vendor/bin/phpunit --coverage-clover=coverage.xml
 
