--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "~1.0",
         "league/csv": "^9.1",
         "php-http/guzzle6-adapter": "^1.1",
+        "sensiolabs/security-checker": "^4.1",
         "spatie/laravel-activitylog": "^2.3",
         "spatie/laravel-permission": "^2.7",
         "spatie/laravel-robots-middleware": "^1.0"
