--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "php-http/guzzle6-adapter": "^1.1",
         "sensiolabs/security-checker": "^4.1",
         "spatie/laravel-activitylog": "^2.3",
+        "spatie/laravel-backup": "^5.1",
         "spatie/laravel-permission": "^2.7",
         "spatie/laravel-robots-middleware": "^1.0"
     },
