--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,6 @@
         "laravel/tinker": "~1.0",
         "league/csv": "^9.1",
         "php-http/guzzle6-adapter": "^1.1",
-        "sensiolabs/security-checker": "^4.1",
         "spatie/laravel-activitylog": "^2.3",
         "spatie/laravel-backup": "^5.1",
         "spatie/laravel-permission": "^2.7",
@@ -30,7 +29,8 @@
         "fzaninotto/faker": "~1.4",
         "laravel/homestead": "^7.0",
         "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "~6.0",
+        "sensiolabs/security-checker": "^4.1"
     },
     "autoload": {
         "classmap": [
@@ -53,6 +53,10 @@
         }
     },
     "scripts": {
+        "check-security": [
+            "vendor/bin/security-checker security:check"
+        ],
+        
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
