Fix #26 | Register php-cs-fixer script to the composer.json file

--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,9 @@
         "check-security": [
             "vendor/bin/security-checker security:check"
         ],
-        
+        "fix-cs": [
+            "vendor/bin/php-cs-fixer fix"
+        ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
