--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,9 @@
         "fix-cs": [
             "vendor/bin/php-cs-fixer fix"
         ],
+        "phpunit": [
+            "vendor/bin/phpunit"
+        ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
