--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
-        "bootstrap-social": "^5.1.1"
+        "bootstrap-social": "^5.1.1",
+        "laravel-mix-purgecss": "^1.0.4"
     }
 }
