--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "fzaninotto/faker": "~1.4",
         "laravel/homestead": "^7.0",
         "mockery/mockery": "~1.0",
+        "nunomaduro/collision": "^1.1",
         "phpunit/phpunit": "~6.0",
         "sensiolabs/security-checker": "^4.1"
     },
