Chore: Implementatie Contributing.md
Deze file legt uit hoe mensen die intresse hebben kunnen
bijdagen aan het project.

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,4 +4,5 @@
 *.js linguist-vendored
 
 codecov.yml
-CHANGELOG.md export-ignore
+CHANGELOG.md        export-ignore
+CONTRIBUTING.md     export-ignore
