--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "spatie/laravel-activitylog": "^2.3",
         "spatie/laravel-backup": "^5.1",
         "spatie/laravel-permission": "^2.7",
-        "spatie/laravel-robots-middleware": "^1.0"
+        "spatie/laravel-robots-middleware": "^1.0",
+        "valorin/pwned-validator": "^1.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
