--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "league/csv": "^9.1",
+        "misfits/api-guard": "^4.3",
         "php-http/guzzle6-adapter": "^1.1",
         "spatie/laravel-activitylog": "^2.3",
         "spatie/laravel-backup": "^5.1",
