--- a/codecov.yml
+++ b/codecov.yml
@@ -1,4 +1,7 @@
 ignore: 
   - "app/Providers/BroadcastServiceProvider.php"          # Word genegeerd wegens geen gebruik. 
   - "app/Http/Controllers/Auth/*.php"                     # Word genegeerd wegens testing in framework.
-  - "app/Http/Controllers/Backend/GithubController.php "  # Word genegeerd wegens de GitHub Hooks.
+  - "app/Http/Controllers/Backend/GithubController.php"   # Word genegeerd wegens de GitHub Hooks.
+
+ # Word genegeerd omdat alle repository code word getest met de controllers.
+  - "app/Http/Repositories/*.php"
