--- a/.editorconfig
+++ b/.editorconfig
@@ -11,5 +11,13 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.{scss,js}]
+charset = utf-8
+end_of_line = lf
+indent_size = 2
+indent_style = space
+insert_final_newline = true
+trim_trailing_whitespace = true
+
 [*.md]
 trim_trailing_whitespace = false
