--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/css/errors.css": "/css/errors.css"
+    "/css/errors.css": "/css/errors.css",
+    "/css/auth.css": "/css/auth.css",
+    "/js/auth.js": "/js/auth.js"
 }
