--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "bootstrap-markdown": "^2.10.0",
         "bootstrap-social": "^5.1.1",
-        "laravel-mix-purgecss": "^1.0.4"
+        "laravel-mix-purgecss": "^1.0.4",
+        "markdown": "^0.5.0",
+        "to-markdown": "^3.1.1"
     }
 }
