--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "php-http/guzzle6-adapter": "^1.1",
         "spatie/laravel-activitylog": "^2.3",
         "spatie/laravel-backup": "^5.1",
+        "spatie/laravel-medialibrary": "7.0.0",
         "spatie/laravel-permission": "^2.7",
         "spatie/laravel-robots-middleware": "^1.0",
         "spatie/laravel-sluggable": "^2.1",
