--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "cybercog/laravel-ban": "^3.0",
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~3.3",
+        "graham-campbell/markdown": "^10.0",
         "jenssegers/date": "^3.3",
         "knplabs/github-api": "^2.7",
         "laracasts/flash": "^3.0",
