--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
         "chencha/share": "^5.2",
         "cybercog/laravel-ban": "^3.0",
         "doctrine/dbal": "^2.6",
-        "fideloper/proxy": "~3.3",
+        "fideloper/proxy": "^4.0",
         "graham-campbell/markdown": "^10.0",
         "jenssegers/date": "^3.3",
         "knplabs/github-api": "^2.7",
         "laracasts/flash": "^3.0",
-        "laravel/framework": "5.5.*",
+        "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
         "league/csv": "^9.1",
         "misfits/api-guard": "^4.3",
@@ -36,7 +36,6 @@
         "fzaninotto/faker": "~1.4",
         "laravel/homestead": "^7.0",
         "mockery/mockery": "~1.0",
-        "nunomaduro/collision": "^1.1",
         "phpunit/phpunit": "~6.0",
         "sensiolabs/security-checker": "^4.1"
     },
