--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,9 +1,9 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
     "/css/errors.css": "/css/errors.css",
     "/css/auth.css": "/css/auth.css",
     "/js/bootstrap-markdown.js": "/js/bootstrap-markdown.js",
     "/js/auth.js": "/js/auth.js",
-    "/css/bootstrap-markdown.min.css": "/css/bootstrap-markdown.min.css"
+    "/css/bootstrap-markdown.min.css": "/css/bootstrap-markdown.min.css",
+    "/css/app.css": "/css/app.css"
 }
